# MTToolBox

./: .gitignore  .gitmodules  AUTHORS  COPYING  ChangeLog  INSTALL  LICENSE.txt  Makefile.am  Makefile.in  NEWS  NEWS.jp.utf8.txt  README  README.jp.utf8.txt  SConstruct  _abstract_generator_8hpp.html  _abstract_generator_8hpp_source.html  _algorithm_best_bits_8hpp.html  _algorithm_best_bits_8hpp_source.html  _algorithm_calculate_parity_8hpp.html  _algorithm_calculate_parity_8hpp_source.html  _algorithm_equidistribution_8hpp.html  _algorithm_equidistribution_8hpp_source.html  _algorithm_partial_bit_pattern_8hpp.html  _algorithm_partial_bit_pattern_8hpp_source.html  _algorithm_primitivity_8hpp.html  _algorithm_primitivity_8hpp_source.html  _algorithm_recursion_and_tempering_8hpp.html  _algorithm_recursion_and_tempering_8hpp_source.html  _algorithm_recursion_search_8hpp.html  _algorithm_recursion_search_8hpp_source.html  _algorithm_reducible_equidistribution_8hpp.html  _algorithm_reducible_equidistribution_8hpp_source.html  _algorithm_reducible_r_t_8hpp.html  _algorithm_reducible_r_t_8hpp_source.html  _algorithm_reducible_recursion_search_8hpp.html  _algorithm_reducible_recursion_search_8hpp_source.html  _algorithm_tempering_8hpp.html  _algorithm_tempering_8hpp_source.html  _equidistribution_calculatable_8hpp.html  _equidistribution_calculatable_8hpp_source.html  (+78 more)
doc/: doxygen.cfg  mainpage.txt
doc/ja/: _2_users_2saito_2work_2_m_t_tool_box_2include_2_m_t_tool_box_2_algorithm_best_bits_8hpp-example.html  _algorithm_equidistribution_8hpp.html  _algorithm_partial_bit_pattern_8hpp_source.html  _algorithm_primitivity_8hpp.html  _algorithm_recursion_and_tempering_8hpp.html  _algorithm_recursion_and_tempering_8hpp_source.html  _algorithm_recursion_search_8hpp.html  _mersenne_twister_8hpp_source.html  (+31 more)
doxygen/: Makefile  SConstruct  doxygen.cfg  doxygen.en.cfg  doxygen.jp.cfg  mainpage.en.txt  mainpage.jp.txt  mainpage.txt
en/: _abstract_generator_8hpp.html  _abstract_generator_8hpp_source.html  _algorithm_best_bits_8hpp.html  _algorithm_best_bits_8hpp_source.html  _algorithm_calculate_parity_8hpp.html  _algorithm_calculate_parity_8hpp_source.html  _algorithm_equidistribution_8hpp.html  _algorithm_equidistribution_8hpp_source.html  _algorithm_partial_bit_pattern_8hpp.html  _algorithm_partial_bit_pattern_8hpp_source.html  _algorithm_primitivity_8hpp.html  _algorithm_primitivity_8hpp_source.html  _algorithm_recursion_and_tempering_8hpp.html  _algorithm_recursion_and_tempering_8hpp_source.html  _algorithm_recursion_search_8hpp.html  _algorithm_recursion_search_8hpp_source.html  _algorithm_reducible_equidistribution_8hpp.html  _algorithm_reducible_equidistribution_8hpp_source.html  _algorithm_reducible_r_t_8hpp.html  _algorithm_reducible_r_t_8hpp_source.html  _algorithm_reducible_recursion_search_8hpp.html  _algorithm_reducible_recursion_search_8hpp_source.html  _algorithm_tempering_8hpp.html  _algorithm_tempering_8hpp_source.html  _equidistribution_calculatable_8hpp.html  _equidistribution_calculatable_8hpp_source.html  _mersenne_twister64_8hpp.html  _mersenne_twister64_8hpp_source.html  _mersenne_twister_8hpp.html  _mersenne_twister_8hpp_source.html  _recursion_searchable_8hpp.html  _recursion_searchable_8hpp_source.html  _reducible_generator_8hpp.html  _reducible_generator_8hpp_source.html  _reducible_tempering_calculatable_8hpp.html  _reducible_tempering_calculatable_8hpp_source.html  _sequential_8hpp.html  _sequential_8hpp_source.html  _tempering_calculatable_8hpp.html  _tempering_calculatable_8hpp_source.html  (+51 more)
include/: Makefile.am  Makefile.in  random_util.hpp
lib/: .gitignore  AlgorithmPrimitivity.cpp  Makefile  Makefile.am  Makefile.in  Makefile.org  MersenneTwister.cpp  SConscript  SConstruct  period.cpp  version.c  version.cpp
samples/: Makefile.am  Makefile.in  SConstruct
samples/MTDC/: .gitignore  Makefile.am  Makefile.in  SConstruct  mt1.cpp  mt2.cpp
samples/MTGPDC/: .gitignore  MTGP32dc.cpp  MTGP32search.hpp  Makefile  Makefile.am  Makefile.in  Makefile.org  SConstruct  mtgp_param.h  output.hpp  parse_opt.cpp  parse_opt.hpp  test.cpp  test_linearity.cpp
samples/RMT/: .gitignore  Makefile.am  Makefile.in  Makefile.private  SConstruct  calc_equidist.cpp  calc_period.cpp  rmt64.hpp  rmt64dc.cpp
samples/TinyMTDC/: .gitignore  Makefile  Makefile.am  Makefile.in  Makefile.org  README.jp.txt  SConstruct  output.hpp  parse_opt.cpp  sequential.cpp  sequential.hpp  tinymt32dc.cpp  tinymt32search.hpp
samples/XORSHIFT/: .gitignore  Makefile.am  Makefile.in  README  README.utf8.ja.txt  SConstruct  xorshift-1.cpp  xorshift-2.cpp  xorshift-3.cpp  xorshift-4.cpp  xorshift-5.cpp  xorshift128.c  xorshift128.h  xorshift128_main.c
samples/dSFMTdc/: .gitignore  AlgorithmDSFMTEquidistribution.hpp  Annihilate.cpp  Annihilate.h  Makefile  Makefile.am  Makefile.in  Makefile.private  README.txt  README.utf8.jp.txt  calc_equidist.cpp  calc_fixpoint.cpp  calc_fixpoint.h  calc_fixpoint_main.cpp  calc_parity.cpp  calc_parity.h  calc_parity_main.cpp  calc_period.cpp  dSFMTdc.cpp  dSFMTsearch.hpp  make_old_format.cpp  printBinary.cpp  printBinary.h  test_linearity.cpp  w128.hpp
samples/sfmtdc/: .gitignore  AlgorithmSIMDEquidistribution.hpp  Annihilate.cpp  Annihilate.h  Makefile.am  Makefile.in  Makefile.private  README.txt  README.utf8.jp.txt  calc_equidist.cpp  calc_parity.cpp  calc_parity.h  sfmtdc.cpp  sfmtdcfixed.cpp  sfmtsearch.hpp  test_linearity.cpp  test_period.cpp  uint128.hpp  w128.hpp
slide/: .gitignore  Makefile  logo.eps  mttoolbox.bbl  mttoolbox.tex  sfmt-kanren.bib  xorshift-11.cpp  xorshift-12.cpp  xorshift-21.cpp  xorshift-211.cpp  xorshift-22.cpp
src/: abstract_generator.hpp  abstract_searcher.hpp  sfmtsearch.hpp
test/: .gitignore  Makefile  Makefile.am  Makefile.in  SConstruct  main.cpp  period.cpp  test_equidist.cpp  test_generator.hpp  test_linearity.cpp  test_mt.cpp  test_period.cpp  test_primefactors.cpp  test_rlittle.cpp  test_rtiny.cpp  test_search.cpp  test_search_temper.cpp  test_temper.cpp  test_temper_searcher.hpp  test_version.cpp  tinymt32.h  tinymt64.h
(+32 files in other folders)
