#lib_LTLIBRARIES = libMTToolBox.la
#libMTToolBox_la_SOURCES = period.cpp AlgorithmPrimitivity.cpp version.cpp
#libMTToolBox_la_LDFLAGS = -no-undefined -version-info 0:2:0 -lntl
#libMTToolBox_la_CXXFLAGS = -I../include -O3 -Wall -Wextra \
-D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS
lib_LIBRARIES = libMTToolBox.a
libMTToolBox_a_SOURCES = period.cpp AlgorithmPrimitivity.cpp version.cpp
#libMTToolBox_a_LDFLAGS = -no-undefined -version-info 0:2:0 -lntl
libMTToolBox_a_CXXFLAGS = -I../include -O2 -Wall -Wextra \
-Wno-unused-parameter \
-D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS
